# atlas

./: .dockerignore  .env.example  .gitignore  API_CHANGES.md  API_TEST_REPORT.md  API_UUID_MIGRATION.md  ARCHITECTURE_REVIEW.md  AUTHENTICATION.md  BACKEND_BUG_REPORT.md  BACKEND_FIXES.md  BACKEND_ISSUES.md  BUG_FIX_REPORT.md  DATA_CONSISTENCY_FIX.md  DELETE_BUG_FIX.md  DEPLOYMENT.md  Dockerfile  FRONTEND_GUIDE.md  JWT_IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  README.md  ROOT_PATH_GUIDE.md  ROOT_PATH_UPDATE.md  UPDATE_NOTES.md  USAGE.md  app.py  create_admin.py  debug_jwt.sh  docker-compose.yaml  migrate_cascade_delete.py  nginx.conf.example  pyproject.toml  refactor_to_standard_ddd.py  start.sh  test_agent_crud.sh  test_api.sh  test_auth.sh  test_complete.sh  test_conversation_update.sh  test_data_consistency.sh  test_db_connection.py  (+8 more)
api/: agents.py  auth.py  chat.py  conversations.py  knowledge_base.py  users.py
application/: agent_service.py  auth_service.py  conversation_service.py  knowledge_base_service.py  milvus_service.py  rag_agent.py  user_service.py
assets/: minfadian.txt  xiyouji.txt
config/: __init__.py  database.py  milvus.py  settings.py
core/: auth_config.py  config.py  database.py  milvus_config.py
domain/: __init__.py  auth.py  entities.py
models/: auth.py  auth_schemas.py  entities.py  schemas.py
repository/: __init__.py  agent_repository.py
schemas/: __init__.py
services/: agent_service.py  auth_service.py  conversation_service.py  knowledge_base_service.py  milvus_service.py  multi_rag_manager.py  rag_agent.py  (+2 more)
(+13 files in other folders)
